@@ -1,0 +1,141 @@
+#
+# Collective Knowledge (individual environment - setup)
+#
+# See CK LICENSE.txt for licensing details
+# See CK COPYRIGHT.txt for copyright details
+#
+# Developer: Grigori Fursin, Grigori.Fursin@cTuning.org, http://fursin.net
+#
+
+import os
+
+##############################################################################
+# limit directories 
+
+def limit(i):
+
+    dr=i.get('list',[])
+    drx=[]
+
+    for q in dr:
+        if q.find('.libs')<0:
+           drx.append(q)
+
+    return {'return':0, 'list':drx}
+
+##############################################################################
+# get version from path
+
+def version_cmd(i):
+
+    ck=i['ck_kernel']
+
+    fp=i['full_path']
+    fn=os.path.basename(fp)
+
+    rfp=os.path.realpath(fp)
+    rfn=os.path.basename(rfp)
+
+    ver=''
+
+    if rfn.startswith(fn):
+       ver=rfn[len(fn)+1:]
+       if ver!='':
+          ver='api-'+ver
+
+    return {'return':0, 'cmd':'', 'version':ver}
+
+##############################################################################
+# setup environment setup
+
+def setup(i):
+    """
+    Input:  {
+              cfg              - meta of this soft entry
+              self_cfg         - meta of module soft
+              ck_kernel        - import CK kernel module (to reuse functions)
+
+              host_os_uoa      - host OS UOA
+              host_os_uid      - host OS UID
+              host_os_dict     - host OS meta
+
+              target_os_uoa    - target OS UOA
+              target_os_uid    - target OS UID
+              target_os_dict   - target OS meta
+
+              target_device_id - target device ID (if via ADB)
+
+              tags             - list of tags used to search this entry
+
+              env              - updated environment vars from meta
+              customize        - updated customize vars from meta
+
+              deps             - resolved dependencies for this soft
+
+              interactive      - if 'yes', can ask questions, otherwise quiet
+            }
+
+    Output: {
+              return       - return code =  0, if successful
+                                         >  0, if error
+              (error)      - error text if return > 0
+
+              bat          - prepared string for bat file
+            }
+
+    """
+
+    import os
+
+    # Get variables
+    ck=i['ck_kernel']
+    s=''
+
+    iv=i.get('interactive','')
+
+    cus=i.get('customize',{})
+    fp=cus.get('full_path','')
+
+    hosd=i['host_os_dict']
+    tosd=i['target_os_dict']
+
+    # Check platform
+    hplat=hosd.get('ck_name','')
+
+    hproc=hosd.get('processor','')
+    tproc=tosd.get('processor','')
+
+    remote=tosd.get('remote','')
+    tbits=tosd.get('bits','')
+
+    env=i['env']
+
+    lb=os.path.basename(fp)
+    lbs=lb
+    if lbs.endswith('.so'):
+       lbs=lbs[:-3]+'.a'
+
+    pl=os.path.dirname(fp)
+    cus['path_lib']=pl
+
+    pi=os.path.dirname(pl)
+
+    if pi=='':
+       return {'return':1, 'error':'can\'t find include file'}
+
+    cus['path_bin']=os.path.join(pi,'bin')
+
+    cus['path_include']=os.path.join(pi,'include')
+
+    cus['static_lib']=lbs
+    cus['dynamic_lib']=lb
+
+    if cus.get('path_lib','')!='':
+       s+='export LD_LIBRARY_PATH="'+cus['path_lib']+'":$LD_LIBRARY_PATH\n'
+       s+='export LIBRARY_PATH="'+cus['path_lib']+'":$LIBRARY_PATH\n\n'
+
+    ep=cus.get('env_prefix','')
+    if pi!='':
+       env[ep]=pi
+
+    return {'return':0, 'bat':s}
